8006431: os::Bsd::initialize_system_info() sets _physical_memory too large

Use HW_MEMSIZE instead of HW_USERMEM to get a 64 bit value of the physical memory on the machine. Also reviewed by vitalyd@gmail.com.

Reviewed-by: sla, dholmes, dlong, mikael